--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,4 @@
 <footer class="container align-items-center justify-content-center py-3">
+    <div class="text-center" id="printer"></div>
     <div class="text-center">Todos Los Derechos Reservados <span class="neon-copy">© 2025</span></div>
 </footer>
