--- a/web/templates/web/registro.html
+++ b/web/templates/web/registro.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-center align-items-center vh-100">
-    <div class="container text-center">
+    <div class="container text-center text-white">
       <h1 class="mb-4">Registrarse al panel de administración</h1>
       <div class="d-flex justify-content-center align-items-center">
         <form method="post">
