--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -16,5 +16,20 @@
 
 {% endblock %}
 
+{% block extra_js %}
+<script>
+    const printer = document.getElementById("printer");
 
+    fetch("https://phrasesapi.onrender.com/getAllPhrases")
+        .then(res => res.json())
+        .then(data => {
+            const frase = data[Math.floor(Math.random() * data.length)];
+            printer.innerHTML = frase.phrase + " — " + frase.author;
+    });
 
+</script>
+{% endblock %}
+
+{% block footer %}
+{% include "web/partials/footer.html" %}
+{% endblock %}
