--- a/web/templates/web/panel.html
+++ b/web/templates/web/panel.html
@@ -42,7 +42,8 @@
     <div class="modal fade" id="modalEditar" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <form id="formEditar">
+          <form id="formEditar" method="post">
+            {% csrf_token %}
             <div class="modal-header">
               <h5 class="modal-title">Editar Consulta</h5>
               <button
@@ -53,6 +54,7 @@
               ></button>
             </div>
             <div class="modal-body">
+              <form action="">
               <input type="hidden" id="editarId" />
               <div class="mb-3">
                 <label for="editarCategoria" class="form-label"
