--- a/templates/header.html
+++ b/templates/header.html
@@ -61,6 +61,9 @@
       <li class="list-container-item">
         <a href="{% url 'forma_parte' %}" class="btn texto-nav">Formá parte</a>
       </li>
+      <li class="list-container-item">
+        <a href="{% url 'login' %}" class="btn texto-nav">Administrativo</a>
+      </li>
     </ul>
   </div>
 </div>
