--- a/templates/header.html
+++ b/templates/header.html
@@ -62,7 +62,7 @@
         <a href="{% url 'forma_parte' %}" class="btn texto-nav">Formá parte</a>
       </li>
       <li class="list-container-item">
-        <a href="{% url 'login' %}" class="btn texto-nav">Administrativo</a>
+        <a href="{% url 'login' %}" class="btn texto-nav">Iniciar sesión</a>
       </li>
     </ul>
   </div>
