--- a/web/templates/web/contacto.html
+++ b/web/templates/web/contacto.html
@@ -10,7 +10,7 @@
 {% block content %}
 <section class="container-fluid d-flex flex-column align-items-center justify-content-center p-1 p-xl-5">
   <div class="form-container text-center">
-    <h3 class="fp-texto-principal">¡Consultanos!</h3>
+    <h3 class="fp-texto-principal">¡Consultanos ya!</h3>
     <form class="pt-2"  id="contacto" method="post">
       {% csrf_token %}
       <label for="nombre">Nombre</label>
