--- a/templates/base_panel.html
+++ b/templates/base_panel.html
@@ -48,6 +48,9 @@
         >
           <h1 class="texto-marca">NeoTech</h1>
         </a>
+        <a href="{% url 'administrar' %}" >
+          <h2 class="texto-marca">Administrar</h2>
+        </a>      
         <a href="{% url 'logout' %}" >
           <i class="bi bi-power"></i>
         </a>
