--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
   <div
     class="container-fluid d-flex navbar-dark align-items-center justify-content-around py-2 px-3"
   >
-    <a href="{% url 'index' %}" class="text-decoration-none text-reset" target="_blank" rel="noopener noreferrer">
+    <a href="{% url 'index' %}" class="text-decoration-none text-reset" rel="noopener noreferrer">
       <h1 class="texto-marca">NeoTech</h1>
     </a>
     <nav class="d-none d-md-flex gap-3">
