--- a/web/templates/web/panel.html
+++ b/web/templates/web/panel.html
@@ -29,6 +29,7 @@
           <th scope="col">Categoria</th>
           <th scope="col">Fecha</th>
           <th scope="col">Nombre</th>
+          <th scope="col">Apellido</th>
           <th scope="col">Email</th>
           <th scope="col">LinkedIn</th>
           <th scope="col">Mensaje</th>
@@ -63,12 +64,16 @@
                 <input type="text" id="editarCategoria" class="form-control" />
               </div>
               <div class="mb-3">
+                <label for="editarFecha" class="form-label">Fecha</label>
+                <input type="date" id="editarFecha" class="form-control" />
+              </div>
+              <div class="mb-3">
                 <label for="editarNombre" class="form-label">Nombre</label>
                 <input type="text" id="editarNombre" class="form-control" />
               </div>
               <div class="mb-3">
-                <label for="editarMail" class="form-label">Email</label>
-                <input type="email" id="editarMail" class="form-control" />
+                <label for="editarApellido" class="form-label">Apellido</label>
+                <input type="text" id="editarApellido" class="form-control" />
               </div>
               <div class="mb-3">
                 <label for="editarLinkedin" class="form-label">LinkedIn</label>
