--- a/web/templates/web/panel.html
+++ b/web/templates/web/panel.html
@@ -76,6 +76,10 @@
                 <input type="text" id="editarApellido" class="form-control" />
               </div>
               <div class="mb-3">
+                <label for="editarEmail" class="form-label">Email</label>
+                <input type="email" id="editarEmail" class="form-control" />
+              </div>
+              <div class="mb-3">
                 <label for="editarLinkedin" class="form-label">LinkedIn</label>
                 <input type="text" id="editarLinkedin" class="form-control" />
               </div>
