--- a/web/templates/web/panel.html
+++ b/web/templates/web/panel.html
@@ -77,7 +77,7 @@
               </div>
               <div class="mb-3">
                 <label for="editarEmail" class="form-label">Email</label>
-                <input type="email" id="editarEmail" class="form-control" />
+                <input type="email" id="editarMail" class="form-control" />
               </div>
               <div class="mb-3">
                 <label for="editarLinkedin" class="form-label">LinkedIn</label>
