--- a/templates/base_panel.html
+++ b/templates/base_panel.html
@@ -48,7 +48,10 @@
         >
           <h1 class="texto-marca">NeoTech</h1>
         </a>
-        <a href="{% url 'administrar' %}" >
+        <a href="{% url 'panel' %}" class="text-decoration-none text-reset">
+          <h2 class="texto-marca">Panel</h2>
+        </a>   
+        <a href="{% url 'administrar' %}" class="text-decoration-none text-reset">
           <h2 class="texto-marca">Administrar</h2>
         </a>      
         <a href="{% url 'logout' %}" >
